tests/ui/static_ref.stderr
error[E0521]: borrowed data escapes outside of function
 --> tests/ui/static_ref.rs:4:1
  |
4 | #[pyfunction]
  | ^^^^^^^^^^^^^
  | |
  | `py` is a reference that is only valid in the function body
  | `py` escapes the function body here
  | lifetime `'py` defined here
  | argument requires that `'py` must outlive `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0716]: temporary value dropped while borrowed
 --> tests/ui/static_ref.rs:4:1
  |
4 | #[pyfunction]
  | ^^^^^^^^^^^^-
  | |           |
  | |           temporary value is freed at the end of this statement
  | creates a temporary value which is freed while still in use
  | argument requires that borrow lasts for `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0521]: borrowed data escapes outside of function
 --> tests/ui/static_ref.rs:9:1
  |
9 | #[pyfunction]
  | ^^^^^^^^^^^^^
  | |
  | `py` is a reference that is only valid in the function body
  | `py` escapes the function body here
  | lifetime `'py` defined here
  | argument requires that `'py` must outlive `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
